--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "test:prod": "ng test --browsers=ChromeHeadless --watch=false",
-    "build:prod": "ng build --configuration=production"
+    "build:prod": "ng build --configuration=production",
+    "dev:ssr": "ng run angular-video-player:serve-ssr",
+    "serve:ssr": "node dist/angular-video-player/server/main.js",
+    "build:ssr": "ng build --prod && ng run angular-video-player:server:production",
+    "prerender": "ng run angular-video-player:prerender"
   },
   "private": true,
   "dependencies": {
@@ -21,9 +25,12 @@
     "@angular/forms": "~11.0.5",
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
+    "@angular/platform-server": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@nguniversal/express-engine": "^11.0.1",
     "bootstrap": "4.5.3",
     "chart.js": "2.9.4",
+    "express": "^4.15.2",
     "font-awesome": "4.7.0",
     "lodash-es": "^4.17.20",
     "moment": "2.29.1",
@@ -35,7 +42,9 @@
     "@angular-devkit/build-angular": "~0.1100.5",
     "@angular/cli": "~11.0.5",
     "@angular/compiler-cli": "~11.0.5",
+    "@nguniversal/builders": "^11.0.1",
     "@types/chart.js": "^2.9.29",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/lodash-es": "^4.14.166",
     "@types/node": "^12.11.1",
