--- a/package.json
+++ b/package.json
@@ -1,64 +1,64 @@
 {
-    "name": "angular-video-player",
-    "version": "1.0.0",
-    "license": "MIT",
-    "scripts": {
-        "ng": "ng",
-        "start": "node server.js",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e",
-        "test:prod": "ng test --browsers=ChromeHeadless --watch=false",
-        "build:prod": "ng build --configuration=production",
-        "dev:ssr": "ng run angular-video-player:serve-ssr",
-        "serve:ssr": "node dist/angular-video-player/server/main.js",
-        "build:ssr": "ng build --prod && ng run angular-video-player:server:production",
-        "prerender": "ng run angular-video-player:prerender"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "~11.0.5",
-        "@angular/common": "~11.0.5",
-        "@angular/compiler": "~11.0.5",
-        "@angular/core": "~11.0.5",
-        "@angular/forms": "~11.0.5",
-        "@angular/platform-browser": "~11.0.5",
-        "@angular/platform-browser-dynamic": "~11.0.5",
-        "@angular/platform-server": "~11.0.5",
-        "@angular/router": "~11.0.5",
-        "@nguniversal/express-engine": "^11.0.1",
-        "bootstrap": "4.5.3",
-        "chart.js": "2.9.4",
-        "express": "^4.15.2",
-        "font-awesome": "4.7.0",
-        "lodash-es": "^4.17.20",
-        "moment": "2.29.1",
-        "rxjs": "~6.6.0",
-        "tslib": "^2.0.0",
-        "zone.js": "~0.10.2"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~0.1100.5",
-        "@angular/cli": "~11.0.5",
-        "@angular/compiler-cli": "~11.0.5",
-        "@nguniversal/builders": "^11.0.1",
-        "@types/chart.js": "^2.9.29",
-        "@types/express": "^4.17.0",
-        "@types/jasmine": "~3.6.0",
-        "@types/lodash-es": "^4.14.166",
-        "@types/node": "^12.11.1",
-        "codelyzer": "^6.0.0",
-        "jasmine-core": "~3.6.0",
-        "jasmine-spec-reporter": "~5.0.0",
-        "karma": "~5.1.0",
-        "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage": "~2.0.3",
-        "karma-jasmine": "~4.0.0",
-        "karma-jasmine-html-reporter": "^1.5.0",
-        "protractor": "~7.0.0",
-        "ts-node": "~8.3.0",
-        "tslint": "~6.1.0",
-        "typescript": "~4.0.2"
-    }
+  "name": "angular-video-player",
+  "version": "1.0.0",
+  "license": "MIT",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build --prod",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "test:prod": "ng test --browsers=ChromeHeadless --watch=false",
+    "build:prod": "ng build --configuration=production",
+    "dev:ssr": "ng run angular-video-player:serve-ssr",
+    "serve:ssr": "node dist/angular-video-player/server/main.js",
+    "build:ssr": "ng build --prod && ng run angular-video-player:server:production",
+    "prerender": "ng run angular-video-player:prerender"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~11.0.5",
+    "@angular/common": "~11.0.5",
+    "@angular/compiler": "~11.0.5",
+    "@angular/core": "~11.0.5",
+    "@angular/forms": "~11.0.5",
+    "@angular/platform-browser": "~11.0.5",
+    "@angular/platform-browser-dynamic": "~11.0.5",
+    "@angular/platform-server": "~11.0.5",
+    "@angular/router": "~11.0.5",
+    "@nguniversal/express-engine": "^11.0.1",
+    "bootstrap": "4.5.3",
+    "chart.js": "2.9.4",
+    "express": "^4.15.2",
+    "font-awesome": "4.7.0",
+    "lodash-es": "^4.17.20",
+    "moment": "2.29.1",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.2"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1100.5",
+    "@angular/cli": "~11.0.5",
+    "@angular/compiler-cli": "~11.0.5",
+    "@nguniversal/builders": "^11.0.1",
+    "@types/chart.js": "^2.9.29",
+    "@types/express": "^4.17.0",
+    "@types/jasmine": "~3.6.0",
+    "@types/lodash-es": "^4.14.166",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.1.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.2"
+  }
 }
